# Cub3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
include/: cub3d.h  parsing.h
libft/: Makefile
libft/include/: libft.h
maps/: test_42_map.cub  test_big_map.cub
maps/invalid/: no_FnC.cub  no_tex.cub  open_wall1.cub  open_wall2.cub  open_wall3.cub
maps/valid/: 42.cub  default.cub
src/: main.c  parsing.c  test_map.cub
src/controls/: control.c  key.c  keyhooks.c  mouse.c  move_key.c  reload_win.c
src/drawing/: door.c  draw.c  draw_utils.c  exit.c  load_textures.c  visual.c
src/parsing/: example.c  extract_validated.c  file_handling.c  get_map.c  map.c  map_memory.c  map_validation.c  parse.c  parse_color.c  parse_color_utils.c  parse_map.c  parse_map_utils.c  parse_texture.c  parse_texture_utils.c  parse_utils.c  result.c  utils.c  validation_utils.c
src/runnables/: cub3d.c  main.c
textures/compass_frame/: compass_00.xpm  compass_03.xpm  compass_04.xpm  compass_05.xpm  compass_07.xpm  compass_08.xpm  compass_09.xpm  compass_12.xpm  compass_15.xpm  compass_16.xpm  compass_17.xpm  compass_19.xpm  compass_20.xpm  compass_21.xpm  compass_22.xpm  compass_24.xpm  compass_27.xpm  compass_28.xpm
textures/door_frame/: door_00.xpm  door_01.xpm  door_02.xpm  door_03.xpm  door_04.xpm  door_05.xpm  door_06.xpm  door_07.xpm  door_08.xpm  door_09.xpm  door_10.xpm  door_11.xpm  door_12.xpm  door_13.xpm  door_14.xpm  door_15.xpm  door_16.xpm  door_17.xpm  door_18.xpm  door_19.xpm  door_20.xpm  door_21.xpm  door_22.xpm  door_23.xpm  door_24.xpm  (+67 more)
(+23 files in other folders)
